fixing specs methods params.
